apps/junharry-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: junharry-test
  namespace: leaven
  labels:
    app: junharry-test
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: junharry-test
