apps/junharry-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: junharry-test-ingress
  namespace: leaven
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test.junharry.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: junharry-test
            port:
              number: 3000
